--- a/android/build.gradle
+++ b/android/build.gradle
@@ -72,6 +72,7 @@ repositories {
 dependencies {
     //noinspection GradleDynamicVersion
     implementation 'com.facebook.react:react-native:+'  // From node_modules
+    implementation 'androidx.cardview:cardview:1.0.0'
 }
 
 def configureReactNativePom(def pom) {
