--- a/android/build.gradle
+++ b/android/build.gradle
@@ -53,6 +53,11 @@ android {
     lintOptions {
         abortOnError false
     }
+    sourceSets {
+        main {
+            assets.srcDirs = ['src/main/assets', 'src/main/assets/']
+        }
+    }
 }
 
 repositories {
