--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "react-native": ">=0.60.0-rc.0 <1.0.x"
   },
   "devDependencies": {
+    "dayjs": "^1.10.6",
     "react": "^16.9.0",
     "react-native": "^0.61.5"
   }
